--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,84 @@
-# NOTE: Extend this file with additional packages and specific versions required by your project.
-# For example, add dataset-specific libraries, experiment tracking or GPU tooling as needed.
-
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+asttokens==3.0.1
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+comm==0.2.3
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.18
+decorator==5.2.1
+exceptiongroup==1.3.1
+executing==2.2.1
+fastapi==0.124.4
+filelock==3.20.0
+fonttools==4.61.1
+fsspec==2025.12.0
+h11==0.16.0
+idna==3.11
+ipykernel==7.1.0
+ipython==8.37.0
+jedi==0.19.2
+jinja2==3.1.6
+joblib==1.5.2
+jupyter-client==8.7.0
+jupyter-core==5.9.1
+kiwisolver==1.4.9
+markupsafe==3.0.3
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mpmath==1.3.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvtx-cu12==12.1.105
+packaging==25.0
 pandas==2.2.2
-pandas==2.2.2
+parso==0.8.5
+pexpect==4.9.0
+pillow==12.0.0
+platformdirs==4.5.1
+prompt-toolkit==3.0.52
+psutil==7.1.3
+ptyprocess==0.7.0
+pure-eval==0.2.3
+pydantic==2.12.5
+pydantic-core==2.41.5
+pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==27.1.0
+requests==2.32.5
 scikit-learn==1.5.0
-matplotlib==3.9.0
+scipy==1.15.3
 seaborn==0.13.2
+six==1.17.0
+stack-data==0.6.3
+starlette==0.50.0
+sympy==1.14.0
+threadpoolctl==3.6.0
 torch==2.3.0
 torchvision==0.18.0
+tornado==6.5.3
+traitlets==5.14.3
+triton==2.3.0
+typing-extensions==4.15.0
+typing-inspection==0.4.2
+tzdata==2025.3
+urllib3==2.6.2
+uvicorn==0.38.0
+wcwidth==0.2.14
